-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.9.0
-
openSUSE-Tumbleweed 20250427
-
-
cc1929d53 (dev), af9d91634 (6.9), 3962cf23c (dev), 8acf0e04c (6.10)
-
DaVinci 119, DaVinci 120, DaVinci 121, DaVinci 126, DaVinci 127
While working on reproducible builds for openSUSE, I found that various packages have variations in their doc build. E.g. our qt6-datavis3d-docs-html varies in /usr/share/doc/qt6/qtdatavis3d/qtdatavis3d.index because a section
{{<page name="qmlaxishandling" }}
moved.
Other affected packages include:
qt6-3d qt6-base qt6-charts qt6-connectivity qt6-graphs qt6-grpc qt6-multimedia qt6-positioning qt6-remoteobjects qt6-scxml qt6-serialbus qt6-tools qt6-websockets
I did not observe this issue with previous Qt-6.8.2
| For Gerrit Dashboard: QTBUG-136483 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 684171,1 | QDoc: Improve sort stability for index files | tqtc/lts-6.8 | qt/tqtc-qttools | Status: NEW | 0 | 0 |
| 645488,3 | QDoc: Sort non-function nodes by name then erase duplicates | dev | qt/qttools | Status: MERGED | +2 | +1 |
| 649269,2 | QDoc: Sort non-function nodes by name then erase duplicates | 6.9 | qt/qttools | Status: MERGED | +2 | 0 |
| 682620,7 | QDoc: Improve sort stability for index files | dev | qt/qttools | Status: MERGED | +2 | 0 |
| 684040,3 | QDoc: Improve sort stability for index files | 6.10 | qt/qttools | Status: MERGED | +2 | 0 |