QDoc: Sort non-function nodes by name then erase duplicates

The order of node information in index files could change between runs
of QDoc. This appears to be due to the sorting method used before
erasing duplicate non-function nodes.

Task-number: QTBUG-136483
Change-Id: Ia58585c19e1c22172ee4c58c3ba054ec5d14a0d5
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit cc1929d53abaefe5179dd8bb0f91fe2d4af02a86)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>